--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <nav class="navbar navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/assets/images/leads-don che.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          <img src="/assets/images/favicon.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
           Leads Don Che
         </a>
       </div>
@@ -98,24 +98,35 @@
   <section class="main">
     <div class="container">
       <div class="row align-items-center">
-        <!-- Imagen representativa / Video -->
-        <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 animate-button">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SJfoPdeOPCQ?si=6zaitnltyIa8CjSy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </div>
+        <!-- Imagen representativa -->
+        <div class="col-lg-5 animate-button">
+          <img src="/assets/images/camara_fotografica_dentro_de_local_de_comida.jpeg" alt="Contenido multimedia"
+            class="img-fluid  img-main">
+
         </div>
-    
-        <!-- Contenido de texto y lista -->
-        <div class="col-lg-6 col-md-12">
-          <h2>Servicio de diseño web y SEO</h2>
-          <p class="lead">En Leads Don Che, nos dedicamos a potenciar la presencia en línea de tu negocio con soluciones web de vanguardia.</p>
-          <p class="lead">Especializados en el diseño y desarrollo de <b>páginas web</b> para negocios locales, ofrecemos un servicio integral que abarca desde la creación de sitios corporativos hasta tiendas en línea y landing pages, adaptados a las necesidades específicas de tu empresa.</p>
-          <a href="/assets/doc/Como impulsar tu negocio en internet.pdf" download="nombre-del-archivo.pdf" class="btn btn-primary">Descarga la guía gratuita</a>
+
+        <!-- Contenido texto y lista -->
+        <div class="col-lg-7">
+          <h2>Obtén tu <span class="head-span" style="color: orange;">sitio web</span> hecho a la medida, atrae <span
+              class="head-span" style="color: orange;">más clientes</span> y cierra <span class="head-span"
+              style="color: orange;">más ventas</span>.</h2>
+
+          <!-- Lista de características -->
+          <ul class="list-unstyled">
+            <li><i class="fa-solid fa-check"></i> Veloz</li>
+            <li><i class="fa-solid fa-check"></i> Claro y concizo</li>
+            <li><i class="fa-solid fa-check"></i> Diseño atractivo</li>
+            <li><i class="fa-solid fa-check"></i> Optimizado para conversión</li>
+            <li><i class="fa-solid fa-check"></i> Optimizado para Google</li>
+          </ul>
+          <p class="lead">Lograr tus objetivos comerciales en internet sin un sitio web es igual a un pez queriendo
+            trepar un árbol. </p>
+            <a href="/assets/doc/Como impulsar tu negocio en internet.pdf" download="nombre-del-archivo.pdf" class="btn btn-primary">Descarga la guía gratuita</a>
         </div>
       </div>
     </div>
-    
   </section>
+
 
   <!-- Sección de Servicios -->
   <section class="servicios">
@@ -403,7 +414,7 @@
       <!-- Derechos de autor -->
       <div class="derechos-autor">
         <p>&copy; 2023 leadsdonche. Todos los derechos reservados.</p>
-        <a href="/pages/menu.html">menú</a>
+        <a href="/pages/menu.html">men</a>
       </div>
     </div>
   </footer>
