--- a/pages/menu.html
+++ b/pages/menu.html
@@ -253,21 +253,21 @@
                         <label for="mensaje" class="form-label">Mensaje</label>
                         <textarea class="form-control" id="mensaje" name="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Enviar</button>
+                    <button type="submit" class="btn btn-primary w-100" action="menu.html" >Enviar</button>
                 </form>
                 
             </div>
 
             <!-- Información de Contacto -->
-            <div class="col-md-6 text-center d-flex align-items-center justify-content-center">
+            <div class="col-md-6 text-center d-flex align-items-center justify-content-center" style="padding-top: 20px;">
                 <div>
                     <p class="mb-3">
                         <i class="fas fa-phone-alt fa-2x text-success"></i> <br>
-                        <a href="tel:+521XXXXXXXXXX" class="text-dark">+52 1 55 23 39 87 04</a>
+                        <a href="tel:+5215523398704" class="text-dark">+52 1 55 23 39 87 04</a>
                     </p>
                     <p class="mb-3">
                         <i class="fas fa-envelope fa-2x text-danger"></i> <br>
-                        <a href="mailto:info@tuempresa.com" class="text-dark">leadsdonche@gmail.com</a>
+                        <a href="mailto:leadsdonche@gmail.com" class="text-dark">leadsdonche@gmail.com</a>
                     </p>
                     <p class="mb-3">
                         <i class="fab fa-whatsapp fa-2x text-success"></i> <br>
