--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section class="main-section">
         <h1>La tarjeta digital que <span>transforma</span> tu forma de conectar con clientes y prospectos</h1>
         <p>Ten mayor y mejor alcance, presenta tu marca de forma moderna, profesional y siempre accesible.</p>
-        <p><strong>Precio especial para comenzar el 2025 creciendo.</strong></p>
+        <p style="color: #efb810;"><strong>Precio especial para comenzar el 2025 creciendo.</strong></p>
         <a href="#" class="btn btn-primary btn-lg">Obtener mi Tarjeta Digital</a>
         <br>
-        <img src="/assets/images/tarjeta-digital-main.webp" alt="Ejemplo de Tarjeta Digital" style="width: 60%;">
+        <img src="/assets/images/tarjeta-digital-main.webp" alt="Ejemplo de Tarjeta Digital">
     </section>
 
     <section class="benefits-section">
