--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
     </section>
 
     <section class="benefits-section">
-      <h2>Beneficios</h2>
+      <h2><span>Empieza el 2025</span> mejorando conectando</h2>
       <div class="container">
           <div class="row g-4">
               <div class="col-md-3">
                   <div class="benefit">
                       <img src="https://via.placeholder.com/50" alt="Icono 1">
                       <h3>Expande tu Alcance</h3>
-                      <p>Al compartir las invitaciones, la visibilidad de tu negocio crecerá y atraerás nuevos clientes.</p>
+                      <p>Al compartir tu tarjeta, la visibilidad de tu negocio crecerá y atraerás nuevos clientes.</p>
                   </div>
               </div>
               <div class="col-md-3">
                   <div class="benefit">
                       <img src="https://via.placeholder.com/50" alt="Icono 2">
-                      <h3>Captura Nuevos Prospectos</h3>
-                      <p>Las invitaciones recopilan datos de los invitados creando una lista de prospectos para futuras campañas.</p>
+                      <h3>Aumenta tu tasa de respuesta</h3>
+                      <p>Las tarjetas facilitan el contacto y generan más opotunidades de negocio.</p>
                   </div>
               </div>
               <div class="col-md-3">
                   <div class="benefit">
                       <img src="https://via.placeholder.com/50" alt="Icono 3">
-                      <h3>Usa como Publicidad</h3>
-                      <p>Cada invitación con tu logo y datos actúa como publicidad incrementando oportunidades de ventas.</p>
+                      <h3>Enganche con clientes</h3>
+                      <p>Ofrece una experincia 100% personalizada e interactiva que te permite estar en contacto con clientes y prospectos.</p>
                   </div>
               </div>
               <div class="col-md-3">
                   <div class="benefit">
                       <img src="https://via.placeholder.com/50" alt="Icono 4">
-                      <h3>Alianzas Efectivas</h3>
-                      <p>Comparte con otros negocios para crear alianzas que generen nuevos clientes para tu negocio.</p>
+                      <h3>Mejora tu imagen de marca</h3>
+                      <p>Demuestra una imagen profesional, innovadora y comprometida con la sostenibilidad mostrando tus servicios a tus clientes.</p>
                   </div>
               </div>
           </div>
@@ -55,13 +55,13 @@
 
  
   <section class="features-section">
-    <h2>¿Qué incluye nuestra Tarjeta Digital?</h2>
+    <h2><span>¿Qué incluye</span> nuestra Tarjeta Digital?</h2>
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="feature-content">
-                    <h3>Prospecta sin esfuerzo</h3>
-                    <p>Tarjetas de presentación digitales.</p>
+                    <h3><span>$1,500 MXN</span> y es tuya de por vida</h3>
+                    <p>Dominio y un millar de tarjetas laminadas con Qr de regalo.</p>
                     <ul>
                         <li>Diseño profesional</li>
                         <li>Call-to-actions</li>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="https://via.placeholder.com/400x300" alt="Catálogo de invitaciones" class="img-fluid">
+                <img src="/assets/images/tarjeta-presentacion.digital.png" alt="Catálogo de invitaciones" class="img-fluid">
             </div>
         </div>
     </div>
@@ -202,7 +202,7 @@
 <section class="final-call-to-action">
   <h2>Hablemos y Conóceme</h2>
   <p>¿Tienes preguntas o quieres saber más sobre cómo puedo ayudarte? Hablemos directamente por WhatsApp y exploremos cómo mejorar tu presencia digital.</p>
-  <a href="https://wa.me/1234567890" target="_blank" class="btn">¡Hablar por WhatsApp!</a>
+  <a href="https://wa.me/5523398704" target="_blank" class="btn">¡Hablar por WhatsApp!</a>
 </section>
 
 
