--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
   </div>
 </section>
 
+<section class="requirements-section">
+    <h2><span>¿Cómo empezar?</span></h2>
+    <p>Solo nos tendras que enviar los siguientes datos por <b style="color: rgb(10, 223, 10);">Whatsapp</b></p>
+    <div class="container">
+        <ul>
+            <li>Tu nombre y a qué te dedicas.</li>
+            <li>Los servicios que ofreces.</li>
+            <li>La dirección de tu negocio.</li>
+            <li>Tu número de WhatsApp.</li>
+            <li>Los links de tus redes sociales.</li>
+            <li>Todas tus fotos y videos para impactar visualmente.</li>
+        </ul>
+        <p>Nosotros te ayudamos a darle una <span>"manita de gato" </span> con Photoshop y a mejorar tu imagen para que decidas impactar ya.</p>
+    </div>
+</section>
+
 <section class="call-to-action">
   <h2>Adquiere tu Tarjeta de Presentación Digital</h2>
   <p>Antes de que termine el año y te regalamos tu dominio, además te enviaremos un millar de tarjetas laminadas con código QR.</p>
