abogados maquetacion lista

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <section class="call-to-action">
   <h2>Adquiere tu Tarjeta de Presentación Digital</h2>
   <p>Antes de que termine el año y te regalamos tu dominio, además te enviaremos un millar de tarjetas laminadas con código QR.</p>
-  <a href="#" class="btn">¡Quiero mi tarjeta ahora!</a>
+  <a href="/abogados.html" class="btn">¡Quiero mi tarjeta ahora!</a>
 </section>
 
 <section class="faq-section">
