--- a/abogados.html
+++ b/abogados.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lawyer Digital</title>
+    <title>Landing Page | Abogados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/lawyer.css">
@@ -15,10 +15,10 @@
                 <!-- Text content -->
                 <div class="col-lg-6 text-white">
                     <div class="logo mb-3">
-                        <img src="logo.png" alt="Lawyer Digital" width="100">
+                        <img src="/assets/images/logo.svg" alt="Lawyer Digital" width="130">
                     </div>
                     <h1 class="hero-title">Consigue más clientes para tu despacho de abogados</h1>
-                    <p class="hero-description">Con tu Lawyer Digital, ofrecer tus servicios jurídicos es más fácil de lo que piensas.</p>
+                    <p class="hero-description">Con tu Landing Page, ofrecer tus servicios jurídicos es más fácil de lo que piensas.</p>
                     <a href="#cta" class="btn btn-primary hero-btn">Obtener ya</a>
                 </div>
                 <!-- Video -->
