--- a/abogados.html
+++ b/abogados.html
@@ -19,7 +19,9 @@
                     </div>
                     <h1 class="hero-title">Consigue más clientes para tu despacho de abogados</h1>
                     <p class="hero-description">Con tu Landing Page, ofrecer tus servicios jurídicos es más fácil de lo que piensas.</p>
+                    <div class="btn-container">
                     <a href="#cta" class="btn btn-primary hero-btn">Obtener ya</a>
+                    </div>
                 </div>
                 <!-- Video -->
                 <div class="col-lg-6">
