hero font weigth

--- a/abogados.html
+++ b/abogados.html
@@ -36,11 +36,11 @@
         <!-- Contenido textual (columna izquierda) -->
         <div class="col-lg-6 text-white">
           <h1 class="mb-4">
-            Generar más contactos y cerrar tus casos legales de forma automática
+            Genera más contactos y cierra tus casos legales de forma automática
             y sencilla a través de <span>WhatsApp</span>
           </h1>
           <p class="mb-4">
-            Con nuestro sencillo sistema aunque no seas experto en Marketing Digital.
+            Ofrece tus servicios juridicos sin ser un experto de Marketing
           </p>
 
           <!-- Características -->
@@ -69,7 +69,7 @@
                 <i class="bi bi-whatsapp me-2"></i>
                 Quiero más información
               </a>
-              <p class="mb-4" style="margin-top: 5px; font-size: 15px;">
+              <p class="mb-4" style="margin-top: 5px; font-size: 15px; font-weight: 300;">
                 Sin compromiso
               </p>
           </div>
@@ -96,13 +96,12 @@
 
   <!-- Sección Problema-Solución -->
 <section class="problem-solution position-relative">
-  
     <div class="container py-5">
       <div class="row">
         <div class="col-12">
           <h2 class="text-center mb-4">
-            No necesitas ser un experto en
-            <span>Marketing Digital</span>
+            Es 2025 y aun no Digitalizas tu 
+            <span>Despacho</span>
           </h2>
           <p class="text-center mb-5">
             Seguramente te sientes identificado con alguna de estas.
