img card de seccion problema solucion

--- a/abogados.html
+++ b/abogados.html
@@ -40,7 +40,7 @@
             y sencilla a través de <span>WhatsApp</span>
           </h1>
           <p class="mb-4">
-            Ofrece tus servicios juridicos sin ser un experto de Marketing
+            Todo lo que necesitas para ofrece tus servicios juridicos sin ser un experto de Marketing
           </p>
 
           <!-- Características -->
@@ -100,11 +100,11 @@
       <div class="row">
         <div class="col-12">
           <h2 class="text-center mb-4">
-            Es 2025 y aun no Digitalizas tu 
-            <span>Despacho</span>
+            Es 2025 y aun no <span>Digitalizas</span> tu 
+            Despacho
           </h2>
           <p class="text-center mb-5">
-            Seguramente te sientes identificado con alguna de estas.
+            Seguramente te sientes identificado con alguna de las siguientes situaciones:
           </p>
         </div>
       </div>
@@ -117,7 +117,7 @@
               <!-- Imagen de la card -->
               <div class="col-md-4">
                 <img
-                  src="imagen-problema.jpg"
+                  src="/assets/images/no-vender.png"
                   alt="Problema"
                   class="img-fluid rounded-start"
                 />
@@ -125,11 +125,9 @@
               <!-- Contenido de la card -->
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Título del Problema/Solución</h5>
+                  <h5 class="card-title">Nunca he vendido por <span>internet</span></h5>
                   <p class="card-text">
-                    Aquí puedes describir brevemente el problema con el que el abogado
-                    o profesional se identifica, y cómo tu solución lo aborda de forma
-                    efectiva.
+                    No te preocupes al adquirir tu Landing Page te damos toda la formación que necesitas explicada paso a paso.
                   </p>
                 </div>
               </div>
