problemas y soluciones casi terminada

--- a/abogados.html
+++ b/abogados.html
@@ -135,6 +135,80 @@
           </div>
         </div>
         <!-- Si deseas más cards, duplica o añade más bloques similares -->
+        <div class="col-md-8">
+          <div class="card mb-3 horizontal-card">
+            <div class="row g-0 align-items-center">
+              <!-- Imagen de la card -->
+              <div class="col-md-4">
+                <img
+                  src="/assets/images/no-vender.png"
+                  alt="Problema"
+                  class="img-fluid rounded-start"
+                />
+              </div>
+              <!-- Contenido de la card -->
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Falta de <span>tiempo</span></h5>
+                  <p class="card-text">
+                    Implementamos estrategias digitales para que tú te enfoques en tu trabajo legal.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Fin card -->
+
+        <div class="col-md-8">
+          <div class="card mb-3 horizontal-card">
+            <div class="row g-0 align-items-center">
+              <!-- Imagen de la card -->
+              <div class="col-md-4">
+                <img
+                  src="/assets/images/no-vender.png"
+                  alt="Problema"
+                  class="img-fluid rounded-start"
+                />
+              </div>
+              <!-- Contenido de la card -->
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Competencia <span>avanzada</span></span></h5>
+                  <p class="card-text">
+                    Percibes que otros abogados ya tienen una presencia digital consolidada, lo que te hace sentir rezagados.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Fin card -->
+
+        <div class="col-md-8">
+          <div class="card mb-3 horizontal-card">
+            <div class="row g-0 align-items-center">
+              <!-- Imagen de la card -->
+              <div class="col-md-4">
+                <img
+                  src="/assets/images/no-vender.png"
+                  alt="Problema"
+                  class="img-fluid rounded-start"
+                />
+              </div>
+              <!-- Contenido de la card -->
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Preocupaciones <span>legales</span> y <span>éticas</span></h5>
+                  <p class="card-text">
+                    Cumplimos con las normativas para promocionar servicios legales en internet.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Fin card -->
       </div>
     </div>
   </section>
