--- a/abogados.html
+++ b/abogados.html
@@ -119,7 +119,7 @@
                 <img
                   src="/assets/images/no-vender.png"
                   alt="Problema"
-                  class="img-fluid rounded-start"
+                  class="img-fluid rounded"
                 />
               </div>
               <!-- Contenido de la card -->
@@ -143,7 +143,7 @@
                 <img
                   src="/assets/images/falta-tiempo.png"
                   alt="Problema"
-                  class="img-fluid rounded-start"
+                  class="img-fluid rounded"
                 />
               </div>
               <!-- Contenido de la card -->
@@ -151,7 +151,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Falta de <span>tiempo</span></h5>
                   <p class="card-text">
-                    Implementamos estrategias digitales para que tú te enfoques en tu trabajo legal.
+                    Creamos tu presencia digital e implementamos estrategias de marketing para que tú te enfoques en tu trabajo legal.
                   </p>
                 </div>
               </div>
@@ -168,7 +168,7 @@
                 <img
                   src="/assets/images/competencia-avanzada.png"
                   alt="Problema"
-                  class="img-fluid rounded-start"
+                  class="img-fluid rounded"
                 />
               </div>
               <!-- Contenido de la card -->
@@ -176,7 +176,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Competencia <span>avanzada</span></span></h5>
                   <p class="card-text">
-                    Percibes que otros abogados ya tienen una presencia digital consolidada, lo que te hace sentir rezagados.
+                    Percibes que otros abogados ya tienen una presencia digital consolidada, lo que te hace sentir rezagado.
                   </p>
                 </div>
               </div>
@@ -193,7 +193,7 @@
                 <img
                   src="/assets/images/preocupacion-legal.png"
                   alt="Problema"
-                  class="img-fluid rounded-start"
+                  class="img-fluid rounded"
                 />
               </div>
               <!-- Contenido de la card -->
