mejorando soluciones de problemas

--- a/abogados.html
+++ b/abogados.html
@@ -127,7 +127,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Nunca he vendido por <span>internet</span></h5>
                   <p class="card-text">
-                    No te preocupes al adquirir tu Landing Page te damos toda la formación que necesitas explicada paso a paso.
+                    No te preocupes, al adquirir tu Landing Page recibirás una formación completa, explicada paso a paso, para que aproveches al máximo todas sus herramientas y funciones
                   </p>
                 </div>
               </div>
@@ -151,7 +151,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Falta de <span>tiempo</span></h5>
                   <p class="card-text">
-                    Creamos tu presencia digital e implementamos estrategias de marketing para que tú te enfoques en tu trabajo legal.
+                    Nos encargamos de construir, para que puedas dedicarte plenamente a lo que mejor sabes hacer: tu práctica legal.
                   </p>
                 </div>
               </div>
@@ -174,9 +174,9 @@
               <!-- Contenido de la card -->
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Competencia <span>avanzada</span></span></h5>
+                  <h5 class="card-title">Tienes una pagina web pero <span>no le llegan</span> clientes</span></span></h5>
                   <p class="card-text">
-                    Percibes que otros abogados ya tienen una presencia digital consolidada, lo que te hace sentir rezagado.
+                    Desarrollamos estrategias de marketing personalizadas que aseguran que tus clientes ideales lleguen a tu landing page, diseñada estratégicamente para guiarlos hacia la acción más importante: ¡contactarte!
                   </p>
                 </div>
               </div>
@@ -201,7 +201,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Preocupaciones <span>legales</span> y <span>éticas</span></h5>
                   <p class="card-text">
-                    Cumplimos con las normativas para promocionar servicios legales en internet.
+                    Garantizamos que tu presencia online cumpla con todas las normativas legales vigentes, para que puedas promocionar tus servicios con total confianza y tranquilidad.
                   </p>
                 </div>
               </div>
