maquetacion seccion de features

--- a/abogados.html
+++ b/abogados.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,12 @@
   <!-- Link de Bootstrap 5 (CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-  />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
   <!-- Tu hoja de estilos personalizada -->
   <link rel="stylesheet" href="/assets/css/lawyer.css">
 </head>
+
 <body>
 
   <!-- Navbar -->
@@ -23,7 +22,7 @@
       <!-- Logo centrado -->
       <a class="navbar-brand mx-auto" href="#">
         <!-- Ajusta la ruta y nombre de archivo de tu logo -->
-        Neto Web
+        <!-- Neto Web -->
       </a>
     </div>
   </nav>
@@ -59,21 +58,21 @@
             </li>
             <li class="mb-2">
               <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Chat bot Whatsapp
+              Chatbot con Inteligencia Artificial
             </li>
           </ul>
 
           <!-- Botón de WhatsApp -->
           <div class="btn-container" style="text-align: center;">
             <a href="#contact" class="btn btn-lg btn-whatsapp d-inline-block">
-                <i class="bi bi-whatsapp me-2"></i>
-                Quiero más información
-              </a>
-              <p class="mb-4" style="margin-top: 5px; font-size: 15px; font-weight: 300;">
-                Sin compromiso
-              </p>
+              <i class="bi bi-whatsapp me-2"></i>
+              Quiero más información
+            </a>
+            <p class="mb-4" style="margin-top: 5px; font-size: 15px; font-weight: 300;">
+              Sin compromiso
+            </p>
           </div>
-          
+
 
         </div>
 
@@ -81,10 +80,7 @@
         <div class="col-lg-6 mt-5 mt-lg-0">
           <div class="ratio ratio-16x9">
             <!-- Ajusta la URL de YouTube con el ID de tu video -->
-            <iframe 
-              src="https://www.youtube.com/embed/VIDEO_ID"
-              title="Video de YouTube"
-              frameborder="0"
+            <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Video de YouTube" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen>
             </iframe>
@@ -95,12 +91,12 @@
   </main>
 
   <!-- Sección Problema-Solución -->
-<section class="problem-solution position-relative">
+  <section class="problem-solution position-relative">
     <div class="container py-5">
       <div class="row">
         <div class="col-12">
           <h2 class="text-center mb-4">
-            Es 2025 y aun no <span>Digitalizas</span> tu 
+            Es 2025 y aun no <span>Digitalizas</span> tu
             Despacho
           </h2>
           <p class="text-center mb-5">
@@ -108,7 +104,7 @@
           </p>
         </div>
       </div>
-  
+
       <!-- Card horizontal -->
       <div class="row justify-content-center">
         <div class="col-md-8">
@@ -116,18 +112,15 @@
             <div class="row g-0 align-items-center">
               <!-- Imagen de la card -->
               <div class="col-md-4">
-                <img
-                  src="/assets/images/no-vender.png"
-                  alt="Problema"
-                  class="img-fluid rounded"
-                />
+                <img src="/assets/images/no-vender.png" alt="Problema" class="img-fluid rounded" />
               </div>
               <!-- Contenido de la card -->
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Nunca he vendido por <span>internet</span></h5>
                   <p class="card-text">
-                    No te preocupes, al adquirir tu Landing Page recibirás una formación completa, explicada paso a paso, para que aproveches al máximo todas sus herramientas y funciones
+                    No te preocupes, al adquirir tu Landing Page recibirás una formación completa, explicada paso a
+                    paso, para que aproveches al máximo todas sus herramientas y funciones
                   </p>
                 </div>
               </div>
@@ -140,18 +133,15 @@
             <div class="row g-0 align-items-center">
               <!-- Imagen de la card -->
               <div class="col-md-4">
-                <img
-                  src="/assets/images/falta-tiempo.png"
-                  alt="Problema"
-                  class="img-fluid rounded"
-                />
+                <img src="/assets/images/falta-tiempo.png" alt="Problema" class="img-fluid rounded" />
               </div>
               <!-- Contenido de la card -->
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Falta de <span>tiempo</span></h5>
                   <p class="card-text">
-                    Nos encargamos de construir, para que puedas dedicarte plenamente a lo que mejor sabes hacer: tu práctica legal.
+                    Nos encargamos de construir, para que puedas dedicarte plenamente a lo que mejor sabes hacer: tu
+                    práctica legal.
                   </p>
                 </div>
               </div>
@@ -165,18 +155,17 @@
             <div class="row g-0 align-items-center">
               <!-- Imagen de la card -->
               <div class="col-md-4">
-                <img
-                  src="/assets/images/competencia-avanzada.png"
-                  alt="Problema"
-                  class="img-fluid rounded"
-                />
+                <img src="/assets/images/competencia-avanzada.png" alt="Problema" class="img-fluid rounded" />
               </div>
               <!-- Contenido de la card -->
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Tienes una pagina web pero <span>no le llegan</span> clientes</span></span></h5>
+                  <h5 class="card-title">Tienes una pagina web pero <span>no le llegan</span> clientes</span></span>
+                  </h5>
                   <p class="card-text">
-                    Desarrollamos estrategias de marketing personalizadas que aseguran que tus clientes ideales lleguen a tu landing page, diseñada estratégicamente para guiarlos hacia la acción más importante: ¡contactarte!
+                    Desarrollamos estrategias de marketing personalizadas que aseguran que tus clientes ideales lleguen
+                    a tu landing page, diseñada estratégicamente para guiarlos hacia la acción más importante:
+                    ¡contactarte!
                   </p>
                 </div>
               </div>
@@ -190,18 +179,15 @@
             <div class="row g-0 align-items-center">
               <!-- Imagen de la card -->
               <div class="col-md-4">
-                <img
-                  src="/assets/images/preocupacion-legal.png"
-                  alt="Problema"
-                  class="img-fluid rounded"
-                />
+                <img src="/assets/images/preocupacion-legal.png" alt="Problema" class="img-fluid rounded" />
               </div>
               <!-- Contenido de la card -->
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Preocupaciones <span>legales</span> y <span>éticas</span></h5>
                   <p class="card-text">
-                    Garantizamos que tu presencia online cumpla con todas las normativas legales vigentes, para que puedas promocionar tus servicios con total confianza y tranquilidad.
+                    Garantizamos que tu presencia online cumpla con todas las normativas legales vigentes, para que
+                    puedas promocionar tus servicios con total confianza y tranquilidad.
                   </p>
                 </div>
               </div>
@@ -212,9 +198,123 @@
       </div>
     </div>
   </section>
-  
+
+  <!-- Sección de características -->
+  <section class="features-section py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">¿Por qué una <span>Landing Page</span>?</h2>
+      <p class="text-center mb-5">
+        Es la mejor herramienta para generar contactos para tu despacho jurídico.
+      </p>
+
+      <div class="row g-4">
+        <!-- Tarjeta 1 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Diseño Profesional</h5>
+              <p class="card-text">
+                Breve descripción de la característica 1.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 2 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Diseño de logo con IA</h5>
+              <p class="card-text">
+                Breve descripción de la característica 2.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Botones y Mensajes para WhatsApp</h5>
+              <p class="card-text">
+                Breve descripción de la característica 3.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Obtimización SEO</h5>
+              <p class="card-text">
+                Breve descripción de la característica 3.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Campañas publicitarias</h5>
+              <p class="card-text">
+                Breve descripción de la característica 3.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Chatbot con IA</h5>
+              <p class="card-text">
+                Breve descripción de la característica 3.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Lead Magnet</h5>
+              <p class="card-text">
+                Breve descripción de la característica 3.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Anuncios para redes sociales</h5>
+              <p class="card-text">
+                Breve descripción de la característica 3.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+    </div>
+  </section>
+
+
 
   <!-- Scripts de Bootstrap (JS) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
